syntax = "proto3";
package cis.types;
option csharp_namespace = "CIS.Infrastructure.gRPC.CisTypes";

import "google/protobuf/wrappers.proto";
import "NullableGrpcDate.proto";

message GrpcAddress {
  string Street = 1;
  
  google.protobuf.StringValue StreetNumber = 2;
  
  string HouseNumber = 3;
  
  string Postcode = 4;
  
  string City = 5;
  
  google.protobuf.Int32Value CountryId = 6;

  google.protobuf.Int32Value AddressTypeId = 7;
  
  string EvidenceNumber = 8;
   
  bool IsPrimary = 9;

  string DeliveryDetails = 10;

  string CityDistrict = 11;

  string PragueDistrict = 12;

  string CountrySubdivision = 13;

  cis.types.NullableGrpcDate PrimaryAddressFrom = 14;

  string AddressPointId = 15; 
}